# voterbowl

./: .editorconfig  .env.sample  .gitignore  .tool-versions  LICENSE  Procfile  README.md  jsconfig.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: only.json  schools.json
scripts/: dockerpg.sh  runserver.sh  squashall.sh  test.sh
server/: admin.py  asgi_worker.py  settings.py  urls.py
server/schools/: apps.py
server/static/css/: admin_extra.css  base.css  modern-normalize.min.css  nippo.css  voterbowl.css
server/static/js/: fireworks.mjs  htmx.mjs  utils.js  voterbowl.mjs
server/utils/: agcod.py  components.py  contrast.py  email.py  test_agcod.py  test_email.py  tokens.py
server/vb/: admin.py  apps.py  models.py  ops.py  tests.py  urls.py  views.py
server/vb/components/: base.py  base_page.css  base_page.py  button.css  button.py  check_page.css  check_page.js  check_page.py  countdown.css  countdown.js  countdown.py  fail_check_partial.js  faq.css  faq.md  faq.py  finish_check_partial.css  finish_check_partial.js  footer.css  footer.py  home.py  home_page.css  home_page.py  logo.py  logo_specimen.css  ongoing_contest.css  ongoing_contest.js  ongoing_contest.py  rules.md  rules_page.css  rules_page.py  school.py  school_page.css  school_page.py  upcoming_contest.css  upcoming_contest.py  utils.py  validate_email_page.css  validate_email_page.js  validate_email_page.py
server/vb/migrations/: 0001_initial.py  0002_email_validation.py  0002_rename_gift_card.py  0003_allow_for_no_prize.py  0004_index_contest_entry_times.py  0005_rename_related_fields.py  0006_alter_contestentry_options.py  0007_remove_emailvalidationlink_contest_and_more.py  (+7 more)
types/: htmx.d.ts
(+37 files in other folders)
